@@ -1,6 +1,9 @@
 New in v1.2.2 (????/??/??)
 ---------------------------
 
+Add a warning message if extended attributes support is broken by the
+filesystem (such as with older EncFS versions). (Andrew Ferguson)
+
 Improve handling of Windows ACLs by switching to API functions which
 understand inherited ACEs; fixes support for Windows 2000. (Andrew Ferguson)
 
